--- a/index.html
+++ b/index.html
@@ -5,3 +5,17 @@
 layout: home
 author_profile: true
 ---
+{% include helper/_1_head.html %}
+
+{% include helper/_2_topbar_navigation.html %}
+
+{% include helper/_3_masthead.html %}
+
+{{ content }}
+
+{% include helper/_4_footer.html %}
+
+{% include helper/_5_footer_scripts.html %}
+
+</body>
+</html>
