--- a/index.html
+++ b/index.html
@@ -1,25 +1,60 @@
 ---
+title: Home
 layout: default
-title: ezees's Blog | learng  Penetration Testing, Red Teaming, OSINT
-desc: I write about tools I have created for the cyber community, updates regarding my active projects, exploits, tutorials, PoCs and a little bit of Anyting for Shrot Im just Exproring tools
-image: /images/og_twh_2.jpg
+background: '/img/bg-index.jpg'
 ---
 
-<div class="grid md:grid-cols-2 gap-8 mx-5">
-{% for post in paginator.posts %}
-{% assign cv_img = post.image | split: '.' | first %}
-  <div class="bg-c-gray w-full rounded-md m-shadow hover:drop-shadow-md">
-    <a href="{{ site.url }}{{ post.url }}">
-      <div class="flex flex-col">
-        <div class="h-64 lg:h-80">
-          <img class="rounded-t-md lazyload w-full h-full object-cover" src="{{ site.url }}{{ post.image }}" srcset="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="{{ site.url }}{{ cv_img }}.webp, {{ site.url }}{{ cv_img }}.png" alt="{{ post.title }}">
-        </div>
-        <div class="p-5 h-22">
-          <span class="text-white text-base lg:text-xl font-semibold line-clamp-1">{{ post.title }}</span>
-          <span class="text-cyan-400 text-sm">{{ post.date | date: "%b %d, %Y" }}</span>
-        </div>
-      </div>
-    </a>
+<!-- Home Intro
+================================================== -->
+{% if page.url == "/" %} 
+<div class="rounded mb-5 hero">
+  <div class="row align-items-center justify-content-between">
+    <div class="col-md-6">
+      <h1 class="font-weight-bold mb-4 serif-font">Let me  teach you how to become successful online</h1>
+      <p class="lead mb-4">My name is Lyam and I'm here to share with you my knowledge and experience of over 10 years of monetizing my blog.</p>
+      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>
+    </div>
+    <div class="col-md-6 text-right pl-0 pl-lg-4">
+      <img class="intro" height="500" src="{{site.baseurl}}/assets/images/intro.svg">      
+    </div>
   </div>
-{% endfor %}
 </div>
+{% endif %}
+
+<!-- Featured
+================================================== -->
+<section class="row">
+  {% for post in site.posts %}
+      {% if post.featured == true %}
+          <div class="col-md-4 mb-5">
+          {% include postbox.html %}
+          </div>
+      {% endif %}
+  {% endfor %}
+  </div>
+</section>
+
+<!-- Posts List with Sidebar (except featured)
+================================================== -->
+<section class="row">
+  <div class="col-sm-8">
+    <div class="row">
+      {% for post in paginator.posts %}
+      {% unless post.featured == true %}
+      <div class="col-md-6 mb-5">
+        {% include postbox.html %}
+      </div>
+      {% endunless %}
+      {% endfor %}
+    </div>
+    <!-- Pagination -->
+    <div class="bottompagination">
+      <span class="navigation" role="navigation">
+          {% include pagination.html %}
+      </span>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    {% include sidebar.html %}
+  </div>
+</section>
